src/components/about-me/about-me.module.scss
.aboutMeSection {
	width: 100%;
	max-width: var(--max-width);
	padding-right: 2rem;
	color: var(--header-white);
	text-align: left;

	@media (max-width: 480px) {
		padding-right: 1rem;
		padding-left: 1rem;
	}
}

.jobTitle {
	color: var(--neutral-green);
}

.aboutMeTextContainer {
	max-height: 30dvh;
	overflow-y: auto;
	border: 2px solid var(--light-green);
	box-shadow: var(--neon-shadow-light-green);
	padding: 0.8rem;
	border-radius: 20px;
}

/* Hide scrollbar for Chrome, Safari, and Opera */
.aboutMeTextContainer::-webkit-scrollbar {
	display: none;
}

/* Hide scrollbar for IE, Edge, and Firefox */
.aboutMeTextContainer {
	-ms-overflow-style: none; /* IE and Edge */
	scrollbar-width: none; /* Firefox */
}

.aboutMeText {
	font-size: 12px;
	line-height: 1.8;
	max-width: 800px;
	margin: 0 auto;

	@media (max-width: 768px) {
		font-size: 10px;
	}

	@media (max-width: 480px) {
		font-size: 8px;
	}
}

